fixed modal cutoff issue, fix toolbar formatting

--- a/app/components/module/module.css
+++ b/app/components/module/module.css
@@ -13,7 +13,8 @@ body {
     background-color: #f7f7f7;
     height: 100%;
     margin: 0;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
+    z-index: -1;
 }
 
 .content-grid {
